--- a/Template/Campaign 28.html
+++ b/Template/Campaign 28.html
@@ -2,7 +2,7 @@
 <!-- Set text color to background color -->
 <div style="display: none; visibility: hidden; overflow: hidden; opacity: 0; font-size: 1px; line-height: 1px; height: 0; max-height: 0; max-width: 0;
 						color: #FFFFFF;" class="preheader">
-    Kerja bikin lelah ya, [:firstname:]? Semangat yuk, jangan menyerah!  </div>
+    [:firstname:], Semangat yuk! jangan menyerah:)  </div>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html
 	xmlns="http://www.w3.org/1999/xhtml">
